basic html markup

--- a/index.html
+++ b/index.html
@@ -3,9 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="style/index.css" rel="stylesheet" type="text/css">
+    <title>Portfolio</title>
+    
 </head>
 <body>
-    
+<section>
+    <header>
+        <div class="one">
+            <h1>Sha Adkins</h1>
+            <a href="index.html">Home</a>
+            <a href="contact.html">Contact</a>
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+        </div>
+    </header>
+</section>
+<section id="about">
+    <div>
+        <img src="fill later">
+    </div>
+    <div>
+        <h2>Showcase</h2>
+        <a href="projects.html">My Projects</a>
+        <p></p>
+
+    </div>
+
+</section>
+<section class="images">
+    <div>
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src="">
+    </div>
+</section>
+<section class="images">
+    <div>
+        <img src="">
+        <img src="">
+        <img src="">
+        <img src="">
+    </div>
+</section>
+<footer>
+    <div>
+        <a href="contact.html">Contact me!</a>
+    </div>
+    <div>
+        <h2><strong>Social Media</strong></h2>
+        <a href="https://www.twitter.com">Twitter</a>
+        <a href="https://www.boahs.info">Blog</a>
+        <a href="mailto:boahs@boahs.info">Email</a>
+    </div>
+</footer>
 </body>
 </html>
