added freeuse images, and background color

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </section>
 <section id="about">
     <div>
-        <img src="fill later">
+        <img src="https://i.picsum.photos/id/169/2500/1662.jpg?hmac=3DBeyQbiPxO88hBdhIuFPbvy2ff7cm9vmnq8lPIL9Ug" alt= "Cow grazing on grass" width="400" height="400">
     </div>
     <div>
         <h2>Showcase</h2>
@@ -33,18 +33,18 @@
 </section>
 <section class="images">
     <div>
-        <img src="">
-        <img src="">
-        <img src="">
-        <img src="">
+        <img src="https://i.picsum.photos/id/1062/5092/3395.jpg?hmac=o9m7qeU51uOLfXvepXcTrk2ZPiSBJEkiiOp-Qvxja-k" alt= "Doggy" width="200" height="200">
+        <img src="https://i.picsum.photos/id/1062/5092/3395.jpg?hmac=o9m7qeU51uOLfXvepXcTrk2ZPiSBJEkiiOp-Qvxja-k" alt= "Doggy" width="200" height="200">
+        <img src="https://i.picsum.photos/id/1062/5092/3395.jpg?hmac=o9m7qeU51uOLfXvepXcTrk2ZPiSBJEkiiOp-Qvxja-k" alt= "Doggy" width="200" height="200">
+        <img src="https://i.picsum.photos/id/1062/5092/3395.jpg?hmac=o9m7qeU51uOLfXvepXcTrk2ZPiSBJEkiiOp-Qvxja-k" alt= "Doggy" width="200" height="200">
     </div>
 </section>
 <section class="images">
     <div>
-        <img src="">
-        <img src="">
-        <img src="">
-        <img src="">
+        <img src="https://i.picsum.photos/id/1025/4951/3301.jpg?hmac=_aGh5AtoOChip_iaMo8ZvvytfEojcgqbCH7dzaz-H8Y" alt= "Doggy" width="200" height="200">
+        <img src="https://i.picsum.photos/id/1025/4951/3301.jpg?hmac=_aGh5AtoOChip_iaMo8ZvvytfEojcgqbCH7dzaz-H8Y" alt= "Doggy" width="200" height="200">
+        <img src="https://i.picsum.photos/id/1025/4951/3301.jpg?hmac=_aGh5AtoOChip_iaMo8ZvvytfEojcgqbCH7dzaz-H8Y" alt= "Doggy" width="200" height="200">
+        <img src="https://i.picsum.photos/id/1025/4951/3301.jpg?hmac=_aGh5AtoOChip_iaMo8ZvvytfEojcgqbCH7dzaz-H8Y" alt= "Doggy" width="200" height="200">
     </div>
 </section>
 <footer>
