saving current changes

--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 <body>
 <section>
     <header>
+        <h1>Sha Adkins</h1>
         <div class="one">
-            <h1>Sha Adkins</h1>
-            <a href="index.html">Home</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
-            <a href="projects.html">Projects</a>
+            <button><a href="index.html">Home</a></button>
+            <button><a href="contact.html">Contact</a></button>
+            <button><a href="about.html">About</a></button>
+            <button><a href="projects.html">Projects</a></button>
         </div>
     </header>
 </section>
 <section id="about">
     <div>
-        <img src="https://i.picsum.photos/id/169/2500/1662.jpg?hmac=3DBeyQbiPxO88hBdhIuFPbvy2ff7cm9vmnq8lPIL9Ug" alt= "Cow grazing on grass" width="400" height="400">
+        <h2>Sha Adkins</h2>
+        <button><a href="projects.html">My Projects</a></button>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
     </div>
     <div>
-        <h2>Showcase</h2>
-        <a href="projects.html">My Projects</a>
-        <p></p>
-
+        <img src="https://i.picsum.photos/id/169/2500/1662.jpg?hmac=3DBeyQbiPxO88hBdhIuFPbvy2ff7cm9vmnq8lPIL9Ug" alt= "Cow grazing on grass" width="400" height="350">
     </div>
 
 </section>
