--- a/about.html
+++ b/about.html
@@ -23,6 +23,26 @@
 <h1>About me</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </section>
+    <div id="Container">
+        <section class="favAnimals">
+            <p>Favorite animals</p>
+                <li>Dogs</li>
+                <li>Cats</li>
+                <li>Raccoons</li>
+        </section>
+        <section class="favCode">
+            <p>Favorite programming languages</p>
+                <li>JS</li>
+                <li>C#</li>
+                <li>CSS</li>
+        </section>
+        <section class="favEditors">
+            <p>Favorite text editors</p>
+                <li>VSC</li>
+                <li>Sublime</li>
+               <li>Notepad++</li>
+        </section>
+    </div>
 <footer>
     <div class ="bgColor">
     <h3>Like what you see?</h3>
