--- a/projects.html
+++ b/projects.html
@@ -29,9 +29,9 @@
 
 </div>
 <section id="projectDetails">
-    <p>This is a programmed realistic AI doge you can grow to love.</p>
-    <p>Man created computer from lightning, and rocks.</p>
-    <p>Bionic deer will crush you! Do not tempt deer!</p>
+    <p class ="pOne">This is a programmed realistic AI doge you can grow to love.</p>
+    <p class ="pTwo">Man created computer from lightning, and rocks.</p>
+    <p class ="pThree">Bionic deer will crush you! Do not tempt deer!</p>
 </section>
 
 
