--- a/contact.html
+++ b/contact.html
@@ -25,15 +25,12 @@
 
     <section id="contactForm">
       <form action="action_page.php">
-        <label for="fname">First Name</label>
         <input
           type="text"
           id="fname"
           name="firstname"
           placeholder="Your name.."
         />
-
-        <label for="lname">Last Name</label>
         <input
           type="text"
           id="lname"
@@ -41,15 +38,17 @@
           placeholder="Your last name.."
         />
       </form>
-      <label for="subject">Subject</label>
       <textarea
         id="subject"
         name="subject"
         placeholder="Write something.."
-        style="height: 100px; width: 450px;"
+        style="height: 100px; width: 420px;"
       ></textarea>
+
       <input type="submit" value="Submit" />
     </section>
+
+    <p class ="contactP">Feel free to contact me with questions above!</p>
 
     <footer>
       <div class="bgColor">
