--- a/contact.html
+++ b/contact.html
@@ -25,25 +25,34 @@
 
     <section id="contactForm">
       <form action="action_page.php">
+      <div id ="oneContact">
+      <label for="fname">First Name</label>
         <input
           type="text"
           id="fname"
           name="firstname"
           placeholder="Your name.."
         />
+        </div>
+        <div id="twoContact">
+        <label for="lname">Last Name</label>
         <input
           type="text"
           id="lname"
           name="lastname"
           placeholder="Your last name.."
         />
+        </div>
       </form>
+      <div id="threeContact">
+      <label for="subject">Subject:</label>
       <textarea
         id="subject"
         name="subject"
         placeholder="Write something.."
         style="height: 100px; width: 420px;"
       ></textarea>
+      </div>
 
       <input type="submit" value="Submit" />
     </section>
