adding margin fixes for 500px mediaquery

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             alt="Doggy" width="200" height="200">
     </section>
     <section id="imageDescription">
-        <p>Project #1</p>
-        <p>Project #2</p>
-        <p>Project #3</p>
-        <p>Project #4</p>
+        <p class ="oneP">Project #1</p>
+        <p class ="twoP">Project #2</p>
+        <p class ="threeP">Project #3</p>
+        <p class ="fourP">Project #4</p>
     </section>
     </br>
     <section id="images">
@@ -64,10 +64,10 @@
             alt="Doggy" width="200" height="200">
     </section>
     <section class="imageDescription">
-        <p>Project #5</p>
-        <p>Project #6</p>
-        <p>Project #7</p>
-        <p>Project #8</p>
+        <p id ="oneP">Project #5</p>
+        <p id ="twoP">Project #6</p>
+        <p id ="threeP">Project #7</p>
+        <p id ="fourP">Project #8</p>
     </section>
     <footer>
         <div class="bgColor">
